--- a/src/ContosoUniversity/Views/Students/Create.cshtml
+++ b/src/ContosoUniversity/Views/Students/Create.cshtml
@@ -15,21 +15,21 @@
             <label asp-for="EnrollmentDate" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="EnrollmentDate" class="form-control" />
-                <span asp-validation-for="EnrollmentDate" class="text-danger" />
+                <span asp-validation-for="EnrollmentDate" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label asp-for="FirstMidName" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="FirstMidName" class="form-control" />
-                <span asp-validation-for="FirstMidName" class="text-danger" />
+                <span asp-validation-for="FirstMidName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label asp-for="LastName" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger" />
+                <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
