--- a/src/ContosoUniversity/Views/Instructors/Create.cshtml
+++ b/src/ContosoUniversity/Views/Instructors/Create.cshtml
@@ -1,4 +1,4 @@
-@model ContosoUniversity.Models.Course
+@model ContosoUniversity.Models.Instructor
 
 @{
     ViewData["Title"] = "Create";
@@ -8,27 +8,28 @@
 
 <form asp-action="Create">
     <div class="form-horizontal">
-        <h4>Course</h4>
+        <h4>Instructor</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="Credits" class="col-md-2 control-label"></label>
+            <label asp-for="FirstMidName" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Credits" class="form-control" />
-                <span asp-validation-for="Credits" class="text-danger" />
+                <input asp-for="FirstMidName" class="form-control" />
+                <span asp-validation-for="FirstMidName" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="DepartmentID" class="col-md-2 control-label"></label>
+            <label asp-for="HireDate" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <select asp-for="DepartmentID" class ="form-control" asp-items="ViewBag.DepartmentID"></select>
+                <input asp-for="HireDate" class="form-control" />
+                <span asp-validation-for="HireDate" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Title" class="col-md-2 control-label"></label>
+            <label asp-for="LastName" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger" />
+                <input asp-for="LastName" class="form-control" />
+                <span asp-validation-for="LastName" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
